--- a/environment.yaml
+++ b/environment.yaml
@@ -33,10 +33,10 @@ dependencies:
   - brotlipy=0.7.0=py38h497a2fe_1001
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.17.1=h7f98852_1
-  - ca-certificates=2021.5.30=ha878542_0
+  - ca-certificates=2021.7.5=h06a4308_1
   - cachetools=4.2.2=pyhd8ed1ab_0
   - catalogue=2.0.4=py38h578d9bd_0
-  - certifi=2021.5.30=py38h578d9bd_0
+  - certifi=2021.5.30=py38h06a4308_0
   - cffi=1.14.6=py38ha65f79e_0
   - chardet=4.0.0=py38h578d9bd_1
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
@@ -135,7 +135,7 @@ dependencies:
   - numpy-base=1.20.3=py38h74d4b33_0
   - olefile=0.46=py_0
   - openjpeg=2.3.0=h05c96fa_1
-  - openssl=1.1.1k=h7f98852_0
+  - openssl=1.1.1k=h27cfd23_0
   - orc=1.6.7=h89a63ab_2
   - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.2.5=py38h295c915_0
@@ -179,6 +179,7 @@ dependencies:
   - scikit-learn=0.24.2=py38ha9443f7_0
   - scikit-learn-intelex=2021.3.0=py38h578d9bd_1
   - scipy=1.6.2=py38had2a1c9_1
+  - seaborn=0.11.1=pyhd3eb1b0_0
   - send2trash=1.7.1=pyhd8ed1ab_0
   - setuptools=52.0.0=py38h06a4308_0
   - shellingham=1.4.0=pyh44b312d_0
@@ -222,5 +223,7 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.9=haebb681_0
   - pip:
+    - en-core-web-lg==3.1.0
+    - en-core-web-md==3.1.0
     - en-core-web-sm==3.1.0
 prefix: /home/<user>/miniconda3/envs/pyconws
